recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: ':' expected but identifier found.
def treer(steps-1:Int, length:Double, angle:Double, shrink:Double){
               ^Tree:16: error: identifier expected but '}' found.
}
^